@@ -162,7 +162,7 @@ class Sources(BrowserBase):
                                         subs = {}
                                     headers.update({'Origin': self._BASE_URL[:-1]})
                                     res = self._get_request(srclink, headers=headers)
-                                    quals = re.findall(r'#EXT.+?RESOLUTION=\d+x(\d+).+\n(?!#)(.+)', res)
+                                    quals = re.findall(r'#EXT.+?RESOLUTION=\d+x(\d+).*\n(?!#)(.+)', res)
                                     for qual, qlink in quals:
                                         qual = int(qual)
                                         if qual < 577:
